# RoboticArm

./: README.md  client_run.sh  commands.sh  moveit_client_run.sh  pub_topic_directly.sh
src/moving3/: .setup_assistant  CMakeLists.txt  package.xml
src/moving3/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_second_robot.ros2_control.xacro  my_second_robot.srdf  my_second_robot.urdf.xacro
src/moving3/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moving5/: .setup_assistant  CMakeLists.txt  package.xml
src/moving5/config/: assembly.ros2_control.xacro  assembly.srdf  assembly.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/moving5/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moving6/: .setup_assistant  CMakeLists.txt  package.xml
src/my_second_robot/: CMakeLists.txt  package.xml  template_topics_and_actions.txt
src/my_second_robot/config/: ros2_control_config.yaml  rviz_config.rviz
src/my_second_robot/launch/: add_moveit.launch.py  display.launch.py  fake_state_publisher.launch.py  robot_and_screws_in_gz.launch.py  robot_in_gz.launch.py  screws_in_gz.launch.py  start_gz_ros2_control_from_template.launch.py  use_control_fw.launch.py
src/my_second_robot/materials/scripts/: transparent_material.material
src/my_second_robot/scripts/: control_test.py
src/my_second_robot/urdf/: assembly.urdf  assembly.xacro  robot.urdf  robot_w_screwdriver.urdf  screws.urdf
src/my_second_robot/worlds/: empty.sdf
src/robot_sm/: CMakeLists.txt  package.xml
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/launch/: task_planner.launch.py
src/state_machine/resources/: screw_poses.json
src/unscrew_simulation/: .setup_assistant  CMakeLists.txt  package.xml
(+40 files in other folders)
