<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_second_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ehsan.zibaei@gmail.com">ehsan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz</depend>
  <depend>ros2launch</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
